export interface Hero {
  name: string;
  city: string;
}
